load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "api_proto",
    srcs = [
        "client.proto",
        "signing.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "api_go_proto",
    importpath = "github.com/replit/go-replidentity/api",
    proto = ":api_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "api",
    embed = [":api_go_proto"],
    importpath = "github.com/replit/go-replidentity/api",
    visibility = ["//visibility:public"],
)
