load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "examples_lib",
    srcs = ["extract.go"],
    importpath = "github.com/replit/go-replidentity/examples",
    visibility = ["//visibility:private"],
    deps = ["//:go-replidentity"],
)

go_binary(
    name = "examples",
    embed = [":examples_lib"],
    visibility = ["//visibility:public"],
)
